fixed formatting and spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,7 +156,43 @@ button {
 
 /* rocks page styles */
 
+.pageText {
+  padding-left: 20px;
+  padding-right: 15px;
+  word-wrap: break-word;
+}
+
 .rocks {
   display: grid;
+  justify-content: space-evenly;
   grid-template-columns: auto auto;
+  word-wrap: break-word;
+}
+
+.dropDownMenu {
+  padding-right: auto;
+  padding-left: 0;
+  width: 180px;
+}
+
+.searchBar {
+  padding-left: auto;
+  padding-right: 10px;
+}
+
+#rocksList {
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns: auto auto;
+  word-wrap: break-word;
+  gap: 60px;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
+.square {
+  height: 130px;
+  width: 130px;
+  background-color: green;
 }
